k8s/poznan-api-mid-broken/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: poznan-api-mid-broken
spec:
  selector:
    app.kubernetes.io/name: poznan-api-mid-broken
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
