k8s/poznan-api-mid-broken/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poznan-api-mid-broken
  labels:
    app.kubernetes.io/name: poznan-api-mid-broken
spec:
  ingressClassName: nginx
  rules:
  - host: placeholder
    http:
      paths:
      - path: /mid
        pathType: Prefix
        backend:
          service:
            name: poznan-api-mid-broken
            port:
              number: 5000
